webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  # 描述pod
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            # mysql默认端口3306，设置成这个端口作为pod暴露出去的端口号
            - containerPort: 3306
          volumeMounts:
            # 这边要对应到 mysql 的数据储存的位置，跟mysql固定的行为关联
            - mountPath: /var/lib/mysql
              # !!! 这里的name需要和pod层的volumns里的name保持一样，用于确定当前container需要使用整个pod里面的哪个卷
              name: mysql-persistent-storage
#        - name: webook-hadoop
      restartPolicy: Always
      # 配置持久化卷 - 这里针对的是整个spec的，就是整个pod里面有哪些volumn
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: webook-mysql-cliam-v2
        # 可以有多个名称，用于区分pod里不同容器的存储区分
#        - name: hadoop-persistent-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-claim
