webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  # 副本数量
  replicas: 2
  selector:
    matchLabels:
      app: webook
  # template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        # 因为上面 selector-matchLabels 里面我们找的就是这个 label，两处需要完全一样
        app: webook
    # POD 的具体信息
    spec:
      # POD 里面运行的 container
      containers:
        - name: webook
          image: liuhuan/webook:v2.0.2
          ports:
            # 需要对应你的应用中服务监听的端口号。在我们的main.go中写死了8080
            - containerPort: 8081
          # 一个pod里可以跑多个container
#        - name: mysql
#          image: mysql:8.0
